# product-review-analysis

./: README.md  main1.py  product_cache.db  pyproject.toml
backend/: main.py  requirements.txt
backend/agent/: prompts.py  tasks.py
backend/api/: routes.py
backend/database/: connection.py  models.py
backend/utils/: data_parser.py
frontend/: app.py
frontend/components/: dashboard.py  detailed_review.py  evidence.py  quick_review.py  summary.py
