[project]
name = "product-review-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.5",
    "fastapi>=0.135.2",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.9",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
